--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         <p>Her with her brother Finneas, really makes a good job in connecting with their fans</p>
     </div>
     <div class="youtube">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/3MteSlpxCpo" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/l08Zw-RY__Q?si=tsVDS3KK_mzk0wnc&amp;controls=0"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="menu">
         <a href="statistics.html"><input type="button" value="statistics"></a>
