--- a/index.html
+++ b/index.html
@@ -2,38 +2,39 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Favorite!</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Favorite!</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="page">
-        <div class="title">
-            <h1>Billie Eilish</h1>
-        </div>
-        <div class="intro">
-            <p>Welcome to my fanpage. </p>
-            <p>Here you can find some information about my favorite artist : Billie Eilish</p>
-
-            <p>I really like this singer, since even thought it might be very recognizable. It's for a reason, since I
-                feel
-            </p>
-            <p>her voice, her lyrics and the meaning of all of her songs are very beautiful.</p>
-            <p>Her with her brother Finneas, really makes a good job in connecting with their fans</p>
-        </div>
-        <div class="youtube">
-            <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/l08Zw-RY__Q?si=tsVDS3KK_mzk0wnc&amp;controls=0"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
-        <div class="menu">
-            <a href="statistics.html"><input type="button" value="statistics"></a>
-        </div>
+  <div class="page">
+    <div class="title">
+      <h1>Billie Eilish</h1>
     </div>
+    <div class="intro">
+      <p>Welcome to my fanpage. </p>
+      <p>Here you can find some information about my favorite artist : Billie Eilish</p>
+
+      <p>I really like this singer, since even thought it might be very recognizable. It's for a reason, since I
+        feel
+      </p>
+      <p>her voice, her lyrics and the meaning of all of her songs are very beautiful.</p>
+      <p>Her with her brother Finneas, really makes a good job in connecting with their fans</p>
+    </div>
+    <div class="youtube">
+      <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/l08Zw-RY__Q?si=tsVDS3KK_mzk0wnc&amp;controls=0" title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    <div class="menu">
+      <a href="statistics.html"><input type="button" value="Statistics"></a>
+      <a href="photos.html"><input type="button" value="Photos"></a>
+    </div>
+  </div>
 </body>
 
 </html>
